# YOLOv8-CPP-Inference

./: CMakeLists.txt  README.md  main.cpp
include/: inference.h
include/opencv2/: calib3d.hpp  cvconfig.h  opencv_modules.hpp
src/: CMakeLists.txt  det_header_inference.cpp  inference.cpp
